@@ -31,7 +31,8 @@ set FUNCTION_MODE_INDEX=-1
 set SERVER_INDEX=-1
 set EMBEDDED_STORAGE_INDEX=-1
 set EMBEDDED_STORAGE=""
-
+set DEPLOYMENT_INDEX=-1
+set DEPLOYMENT="merged"
 
 set i=0
 for %%a in (%*) do (
@@ -39,6 +40,7 @@ for %%a in (%*) do (
     if "%%a" == "-f" ( set /a FUNCTION_MODE_INDEX=!i!+1 )
     if "%%a" == "-s" ( set /a SERVER_INDEX=!i!+1 )
     if "%%a" == "-p" ( set /a EMBEDDED_STORAGE_INDEX=!i!+1 )
+    if "%%a" == "-d" ( set /a DEPLOYMENT_INDEX=!i!+1 )
     set /a i+=1
 )
 
@@ -48,14 +50,20 @@ for %%a in (%*) do (
     if %FUNCTION_MODE_INDEX% == !i! ( set FUNCTION_MODE="%%a" )
     if %SERVER_INDEX% == !i! (set SERVER="%%a")
     if %EMBEDDED_STORAGE_INDEX% == !i! (set EMBEDDED_STORAGE="%%a")
+    if %DEPLOYMENT_INDEX% == !i! (set DEPLOYMENT="%%a")
     set /a i+=1
 )
+
+call :Process_required_config "nacos.core.auth.plugin.nacos.token.secret.key" %BASE_DIR%\conf\application.properties
+call :Process_required_config "nacos.core.auth.server.identity.key" %BASE_DIR%\conf\application.properties
+call :Process_required_config "nacos.core.auth.server.identity.value" %BASE_DIR%\conf\application.properties
 
 rem if nacos startup mode is standalone
 if %MODE% == "standalone" (
     echo "nacos is starting with standalone"
 	  set "NACOS_OPTS=-Dnacos.standalone=true"
-    set "NACOS_JVM_OPTS=-Xms512m -Xmx512m -Xmn256m"
+    if "%CUSTOM_NACOS_MEMORY%"=="" ( set "CUSTOM_NACOS_MEMORY=-Xms512m -Xmx512m -Xmn256m" )
+    set "NACOS_JVM_OPTS=%CUSTOM_NACOS_MEMORY%"
 )
 
 rem if nacos startup mode is cluster
@@ -64,8 +72,8 @@ if %MODE% == "cluster" (
 	  if %EMBEDDED_STORAGE% == "embedded" (
 	      set "NACOS_OPTS=-DembeddedStorage=true"
 	  )
-
-    set "NACOS_JVM_OPTS=-server -Xms2g -Xmx2g -Xmn1g -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=320m -XX:-OmitStackTraceInFastThrow -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=%BASE_DIR%\logs\java_heapdump.hprof -XX:-UseLargePages"
+    if "%CUSTOM_NACOS_MEMORY%"=="" ( set "CUSTOM_NACOS_MEMORY=-Xms2g -Xmx2g -Xmn1g -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=320m" )
+    set "NACOS_JVM_OPTS=-server %CUSTOM_NACOS_MEMORY% -XX:-OmitStackTraceInFastThrow -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=%BASE_DIR%\logs\java_heapdump.hprof -XX:-UseLargePages"
 )
 
 rem set nacos's functionMode
@@ -77,7 +85,16 @@ if %FUNCTION_MODE% == "naming" (
     set "NACOS_OPTS=%NACOS_OPTS% -Dnacos.functionMode=naming"
 )
 
+rem set JVM options for Java 9+
+for /f tokens^=2-5^ delims^=.-_+^" %%j in ('"%JAVA%" -fullversion 2^>^&1') do set "JAVA_MAJOR_VERSION=%%j"
+if %JAVA_MAJOR_VERSION% GEQ 9 (
+    set "NACOS_JVM_OPTS=%NACOS_JVM_OPTS% --add-opens=java.base/java.lang=ALL-UNNAMED"
+    set "NACOS_JVM_OPTS=%NACOS_JVM_OPTS% --add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
+    set "NACOS_JVM_OPTS=%NACOS_JVM_OPTS% --add-opens=java.base/java.util=ALL-UNNAMED"
+)
+
 rem set nacos options
+set "NACOS_OPTS=%NACOS_OPTS% -Dnacos.deployment.type=%DEPLOYMENT%"
 set "NACOS_OPTS=%NACOS_OPTS% -Dloader.path=%BASE_DIR%/plugins,%BASE_DIR%/plugins/health,%BASE_DIR%/plugins/cmdb,%BASE_DIR%/plugins/selector"
 set "NACOS_OPTS=%NACOS_OPTS% -Dnacos.home=%BASE_DIR%"
 set "NACOS_OPTS=%NACOS_OPTS% -jar %BASE_DIR%\target\%SERVER%.jar"
@@ -93,3 +110,44 @@ set COMMAND="%JAVA%" %NACOS_JVM_OPTS% %NACOS_OPTS% %NACOS_CONFIG_OPTS% %NACOS_LO
 
 rem start nacos command
 %COMMAND%
+
+pause
+
+goto :EOF
+
+:Process_required_config
+    setlocal
+    set "key_pattern=%~1"
+    set "target_file=%~2"
+    set "target_file=!target_file:"=!"
+
+    set "escaped_key=%key_pattern:.=\.%"
+
+    findstr /R /C:"^%escaped_key%[= ].*" "%target_file%" >nul
+    if %errorlevel% == 0 (
+        rem Check if the value of the key is empty
+        for /f "usebackq tokens=1,2 delims==" %%a in ("%target_file%") do (
+            if "%%a"=="%key_pattern%" if "%%b"=="" (
+                rem Value is empty, request input from user
+                set /p "input_val=%key_pattern% value is empty, please input: "
+                set "temp_file=%TEMP%\temp_%RANDOM%.tmp"
+                set "key_pattern_with_equal=!key_pattern!="
+
+                for /f "usebackq delims=" %%a in ("!target_file!") do (
+                    set "line=%%a"
+                    set "line=!line: =!"
+                    if "!line!"=="!key_pattern_with_equal!" (
+                        echo %%a!input_val!>>"!temp_file!"
+                    ) else (
+                        echo %%a>>"!temp_file!"
+                    )
+                )
+                move /Y "!temp_file!" "!target_file!" >nul
+                echo %key_pattern% Updated with new value:%input_val%
+                findstr /R "^%escaped_key%" "%target_file%"
+                echo ----------------------------------
+                exit /b
+            )
+        )
+    )
+    endlocal
